Add ErrorProne to the build (#424)